--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -13,20 +12,27 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $angular_practice-primary: mat.define-palette(mat.$indigo-palette);
-$angular_practice-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$angular_practice-accent: mat.define-palette(
+  mat.$pink-palette,
+  A200,
+  A100,
+  A400
+);
 
 // The warn palette is optional (defaults to red).
 $angular_practice-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$angular_practice-theme: mat.define-light-theme((
-  color: (
-    primary: $angular_practice-primary,
-    accent: $angular_practice-accent,
-    warn: $angular_practice-warn,
+$angular_practice-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $angular_practice-primary,
+      accent: $angular_practice-accent,
+      warn: $angular_practice-warn,
+    ),
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -35,5 +41,27 @@ $angular_practice-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+// .sidenav-width {
+//   width: 200px;
+// }
+
+// .sidenav-width {
+//   width: 100px;
+// }
+
+.sidenav-width {
+  width: 200px;
+}
+
+.sidenavicon-width {
+  width: 100px;
+}
