--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,23 +1,43 @@
-.example-container {
+.main {
+  border: 2px solid red;
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  background: #eee;
   display: flex;
   flex-direction: column;
 }
 
-.example-sidenav-container {
+.side-nav-container {
+  border: 2px solid green;
   flex: 1;
 }
-.example-is-mobile .example-toolbar {
-  position: fixed;
-  /* Make sure the toolbar will stay on top of the content as it scrolls past. */
-  z-index: 2;
+.side-nav {
+  display: flex;
+  flex-direction: column;
+  height: inherit;
+  width: inherit;
+}
+.side-nav-collapse {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sidenav-menu-name {
+  display: none;
+  visibility: hidden;
+}
+.test {
+  border: 2px solid green;
+  align-self: center;
 }
 
-h1.example-app-name {
-  margin-left: 8px;
+.header-nav {
+  border: 2px solid green;
+  position: fixed;
+  z-index: 1000;
+}
+.header-nav-spacer {
+  flex: 1 1 auto;
 }
