mat tree example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
     <!-- use a disabled button to provide padding for tree leaf -->
     <!-- <button mat-icon-button disabled></button> -->
-    {{ node.name }}child
+    {{ node.url | json }}child
   </mat-tree-node>
 
   <!-- parent -->
@@ -18,7 +18,7 @@
       <!-- <mat-icon class="mat-icon-rtl-mirror">
         {{ treeControl.isExpanded(node) ? "expand_more" : "chevron_right" }}
       </mat-icon> -->
-      {{ node.name }}
+      {{ node.name.name }}
     </button>
   </mat-tree-node>
 </mat-tree>
