--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <section>
   <div class="example-label">Basic</div>
   <div class="example-button-row">
+    <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
     <button mat-button>Basic</button>
     <button mat-button color="primary">Primary</button>
     <button mat-button color="accent">Accent</button>
