--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,50 @@
-<h1>hello</h1>
+<div class="full-width-height" [class.is-mobile]="IsmediaQureyMatch">
+  <mat-toolbar color="primary" class="toolbar">
+    <button mat-icon-button (click)="snav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <h1 class="example-app-name">Test App</h1>
+    <div class="toolbar-spacer"></div>
+    <button mat-icon-button>
+      <mat-icon>person</mat-icon>
+    </button>
+  </mat-toolbar>
 
-<section>
-  <div class="example-label">Basic</div>
-  <div class="example-button-row">
-    <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
-    <button mat-button>Basic</button>
-    <button mat-button color="primary">Primary</button>
-    <button mat-button color="accent">Accent</button>
-    <button mat-button color="warn">Warn</button>
-    <button mat-button disabled>Disabled</button>
-    <a mat-button href="https://www.google.com/" target="_blank">Link</a>
-  </div>
-</section>
-
-<section>
-  <div class="example-label">Raised</div>
-  <div class="example-button-row">
-    <button mat-raised-button>Basic</button>
-    <button mat-raised-button color="primary">Primary</button>
-    <button mat-raised-button color="accent">Accent</button>
-    <button mat-raised-button color="warn">Warn</button>
-    <button mat-raised-button disabled>Disabled</button>
-    <a mat-raised-button href="https://www.google.com/" target="_blank">Link</a>
-  </div>
-</section>
+  <mat-sidenav-container
+    class="sidenav-container"
+    [style.marginTop.px]="IsmediaQureyMatch ? 56 : 0"
+  >
+    <mat-sidenav
+      #snav
+      [mode]="IsmediaQureyMatch ? 'over' : 'side'"
+      [fixedInViewport]="IsmediaQureyMatch"
+      [fixedTopGap]="56"
+      opened
+    >
+      <mat-nav-list>
+        <a mat-list-item matLine>
+          <mat-icon matListIcon>dashboard</mat-icon>
+          <h3 matLine>Dashboard</h3>
+        </a>
+        <a mat-list-item matLine>
+          <mat-icon matListIcon>
+            <span class="material-symbols-outlined"> do_not_disturb_on </span>
+          </mat-icon>
+          <h3 matLine>Leave Request</h3>
+        </a>
+        <a mat-list-item matLine>
+          <mat-icon matListIcon>task</mat-icon>
+          <h3 matLine>Daily Tasks</h3>
+        </a>
+        <a mat-list-item matLine>
+          <mat-icon matListIcon>work</mat-icon>
+          <h3 matLine>Start Work</h3>
+        </a>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <p *ngFor="let content of fillerContent">{{ content }}</p>
+      <!-- <h1>demo</h1> -->
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
